// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders alternate variation correctly 1`] = `
<button
  className="base alternate block external action"
  disabled={false}
  onClick={[MockFunction]}
  title="Aēsop"
  type="button"
>
  Alternate Button
</button>
`;

exports[`<Button /> renders base component correct with \`type\` prop 1`] = `
<button
  className="base block external aesop action"
  disabled={false}
  title="Aēsop"
  type="submit"
>
  Submit
</button>
`;

exports[`<Button /> renders base component correctly with \`handleClick\` prop 1`] = `
<button
  className="base block external aesop action"
  disabled={false}
  onClick={[MockFunction]}
  title="Aēsop"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> renders base component correctly with \`href\` prop 1`] = `
<button
  className="base block external action"
  disabled={false}
  title="Aēsop"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> renders base component correctly with \`to\` prop 1`] = `
<button
  className="base block external action"
  disabled={false}
  title="Aēsop"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> renders component with icon correctly 1`] = `
<button
  className="base block external action"
  disabled={false}
  title="Aēsop"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> renders disabled variation correctly 1`] = `
<button
  className="base block disabled external action"
  disabled={true}
  onClick={[MockFunction]}
  title="Aēsop"
  type="button"
>
  Disabled Button
</button>
`;
